--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -172,11 +172,11 @@
         <h3 id="bloggers">Bloggers</h3>
         <ul>
             <li><a href="http://gnodet.blogspot.com/">Guillaume Nodet's Blog</a></li>
-            <li><a href="http://blog.nanthrax.net/">Jean-Baptiste Onofré's Blog</a></li>
+            <li><a href="http://blog.nanthrax.net/">Jean-Baptiste Onofre's Blog</a></li>
             <li><a href="http://icodebythesea.blogspot.com/">I Code by the Sea</a></li>
             <li><a href="http://iocanel.blogspot.com/">Ioannis Canellos Blog</a></li>
             <li><a href="http://blog.code-house.org/">The Code-House Blog</a></li>
-            <li><a href="http://www.liquid-reality.de/">Christian Schneider´s Blog</a></li>
+            <li><a href="http://www.liquid-reality.de/">Christian Schneider's Blog</a></li>
             <li><a href="http://notizblog.nierbeck.de/">Achim Nierbeck's Blog</a></li>
         </ul>
             </div>
