--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,7 +82,7 @@
                             <h3 class="key-feature--title">Modern Container</h3>
 
                             <div class="key-feature--text">
-                                Karaf can be use standalone as a container, supporting a wide range of applications and
+                                Karaf can run as a standalone container, supporting a wide range of applications and
                                 technologies.
                             </div>
                         </div>
