Fix style and copyright year
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1728661 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -145,7 +145,7 @@
                                 <div class="banner--text">
                                     <div class="container-fluid">
                                         <b>Karaf Container 2.4.4 has been released! (25/1/16)</b><br/>
-                                        <b>WARNING</b>: this is the last release on the 2.x series. This serie is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.
+                                        <b>WARNING</b>: this is the last release on the 2.x series. This series is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.
                                     </div>
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
@@ -161,7 +161,7 @@
                                 <div class="banner--text">
                                     <div class="container-fluid">
                                         <b>Karaf Container 2.3.12 has been released! (25/1/16)</b><br/>
-                                        <b>WARNING</b>: this is the last release on the 2.3.x serie. This serie is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.
+                                        <b>WARNING</b>: this is the last release on the 2.3.x series. This series is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.
                                     </div>
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
@@ -177,7 +177,7 @@
                                 <div class="banner--text">
                                     <div class="container-fluid">
                                         <b>Karaf Container 4.0.4 has been released! (13/1/16)</b><br/>
-                                        This is an update patch for Apache Karaf Container 4.0.x serie, containing many bug fixes, dependency updates, and improvements.
+                                        This is an update patch for Apache Karaf Container 4.0.x series, containing many bug fixes, dependency updates, and improvements.
                                     </div>
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
@@ -193,7 +193,7 @@
                                 <div class="banner--text">
                                     <div class="container-fluid">
                                         <b>Karaf Decanter 1.0.1 has been released! (16/11/15)</b><br/>
-                                        This is a fix version on the 1.x serie. It also brings new features like the
+                                        This is a fix version on the 1.x series. It also brings new features like the
                                         file collector.
                                     </div>
                                 </div>
@@ -354,7 +354,7 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span12">
-                    &copy; <span>2015</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a
+                    &copy; <span>2016</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a
                         href="privacy.html">Privacy Policy</a><br/>
                     Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are
                     trademarks of The Apache Software Foundation.
