--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -70,26 +70,26 @@
             </p>
             <p style="font-size:11px">
                 <b>Karaf Container 2.4.4 has been released! (25/1/16)</b><br/>
-                <b>WARNING</b>: this is the last release on the 2.x series. This serie is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.<br/>
+                <b>WARNING</b>: this is the last release on the 2.x series. This series is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.<br/>
                 <a href="download.html">Download</a>&nbsp; &nbsp;
         &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?version=12332989&projectId=12311140')">Release Notes</a>
             </p>
             <p style="font-size:11px">
                 <b>Karaf Container 2.3.12 has been released! (25/1/16)</b><br/>
-                <b>WARNING</b>: this is the last release on the 2.3.x serie. This serie is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.<br/>
+                <b>WARNING</b>: this is the last release on the 2.3.x series. This series is now in "Non Active" mode. We encourage users to upgrade to more recent Karaf Container versions.<br/>
                 <a href="download.html">Download</a>&nbsp; &nbsp;
         &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12329877')">Release Notes</a>
             </p>
             <p style="font-size:11px">
                 <b>Karaf Container 4.0.4 has been released! (13/1/16)</b><br/>
-                This is an update patch for Apache Karaf Container 4.0.x serie, containing many bug fixes, dependency updates, and improvements.<br/>
+                This is an update patch for Apache Karaf Container 4.0.x series, containing many bug fixes, dependency updates, and improvements.<br/>
                 <a href="download.html">Download</a>&nbsp; &nbsp;
         &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12334047')">Release Notes</a>
             </p>
             <h2 id="2015">2015</h2>
             <p style="font-size:11px">
                 <b>Karaf Decanter 1.0.1 has been released! (16/11/15)</b><br/>
-                This is a fix version on the 1.x serie. It also brings new features like the
+                This is a fix version on the 1.x series. It also brings new features like the
                 file collector.<br/>
                 <a href="javascript:var w = window.open('decanter_installation.html')">Installation</a>&nbsp; &nbsp;
         &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333858')">Release Notes</a>
@@ -293,14 +293,14 @@
             <p style="font-size:11px">
                 <b>Karaf Cave 3.0.0 has been released! (4/7/14)</b>
                 The Karaf team is pleased to announce the availability of Karaf Cave 3.0.0.<br/>
-                This release is the first one of the Cave 3.0.x serie, fully compatible with Karaf 3.0.x.<br/>
+                This release is the first one of the Cave 3.0.x series, fully compatible with Karaf 3.0.x.<br/>
                 It includes major updates and bug fixes.<br/>
                 <a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12327169')">Release Notes</a>
             </p>
             <p style="font-size:11px">
                 <b>Karaf Cellar 3.0.0 has been released! (27/6/14)</b>
                 The Karaf team is pleased to announce the availability of Karaf Cellar 3.0.0.<br/>
-                This release is the first one of the Cellar 3.0.x serie, fully compatible with Karaf 3.0.x and powered by Hazelcast 3.2.3.<br/>
+                This release is the first one of the Cellar 3.0.x series, fully compatible with Karaf 3.0.x and powered by Hazelcast 3.2.3.<br/>
                 It includes major updates and bug fixes.<br/>
                 <a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12316442')">Release Notes</a>
             </p>
@@ -355,7 +355,7 @@
             <p style="font-size:11px">
                 <b>Karaf Cellar 2.3.2 has been released! (14/10/13)</b>
                 The Karaf team is pleased to announce the availability of Karaf Cellar 2.3.2.<br/>
-                This release is the second one on the Cellar 2.3.x branch, fully compatible with the Karaf 2.3.x serie. All users of a Karaf 2.3.x have to use this Cellar version.<br/>
+                This release is the second one on the Cellar 2.3.x branch, fully compatible with the Karaf 2.3.x series. All users of a Karaf 2.3.x have to use this Cellar version.<br/>
                 It includes major bug fixes.<br/>
                 <a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12324646')">Release Notes</a>
             </p>
@@ -374,14 +374,14 @@
             <p style="font-size:11px">
                 <b>Karaf Cellar 2.3.1 has been released! (1/7/13)</b>
                 The Karaf team is pleased to announce the availability of Karaf Cellar 2.3.1.<br/>
-                This release is the second one on the Cellar 2.3.x branch, fully compatible with the Karaf 2.3.x serie. All users of a Karaf 2.3.x have to use this Cellar version.<br/>
+                This release is the second one on the Cellar 2.3.x branch, fully compatible with the Karaf 2.3.x series. All users of a Karaf 2.3.x have to use this Cellar version.<br/>
                 It includes major bug fixes.<br/>
                 <a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12324451')">Release Notes</a>
             </p>
             <p style="font-size:11px">
                 <b>Karaf Cellar 2.3.0 has been released! (23/5/13)</b>
                 The Karaf team is pleased to announce the availability of Karaf Cellar 2.3.0.<br/>
-                This release is the first one on the Cellar 2.3.x branch, fully compatible with the Karaf 2.3.x serie. All users of a Karaf 2.3.x have to use this Cellar version.<br/>
+                This release is the first one on the Cellar 2.3.x branch, fully compatible with the Karaf 2.3.x series. All users of a Karaf 2.3.x have to use this Cellar version.<br/>
                 It includes a lot of bug fixes and new features.<br/>
                 <a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12323370')">Release Notes</a>
             </p>
@@ -586,7 +586,7 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span12">
-                    &copy; <span>2015</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a href="privacy.html">Privacy Policy</a><br/>
+                    &copy; <span>2016</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a href="privacy.html">Privacy Policy</a><br/>
                     Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are trademarks of The Apache Software Foundation.
                 </div>
             </div>
