--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -88,7 +88,7 @@
             <h3 id="container-schedule">Schedule</h3>
             <table border="1" with="90%">
                 <tr>
-                    <th>Serie</th>
+                    <th>Series</th>
                     <th>OSGi Version Support</th>
                     <th>Java Version Support</th>
                     <th>Current Status</th>
@@ -187,7 +187,7 @@
             <h3 id="cellar-schedule">Schedule</h3>
             <table border="1" width="90%">
                 <tr>
-                    <th>Serie</th>
+                    <th>Series</th>
                     <th>Container Version Support</th>
                     <th>Current Status</th>
                     <th>Last Version</th>
@@ -261,7 +261,7 @@
             <h3 id="cave-schedule">Schedule</h3>
             <table border="1" width="90%">
                 <tr>
-                    <th>Serie</th>
+                    <th>Series</th>
                     <th>Container Version Support</th>
                     <th>Current Status</th>
                     <th>Last Version</th>
@@ -319,7 +319,7 @@
             <h3 id="decanter-schedule">Schedule</h3>
             <table border="1" width="90%">
                 <tr>
-                    <th>Serie</th>
+                    <th>Series</th>
                     <th>Container Version Support</th>
                     <th>Current Status</th>
                     <th>Last Version</th>
@@ -357,7 +357,7 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="span12">
-                    &copy; <span>2015</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a
+                    &copy; <span>2016</span> <a href="http://www.apache.org">Apache Software Foundation</a> - <a
                         href="privacy.html">Privacy Policy</a><br/>
                     Apache Karaf, Karaf, Apache, the Apache feather logo, and the Apache Karaf project logo are
                     trademarks of The Apache Software Foundation.
