Publish Karaf Container 3.0.6 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1730804 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -55,6 +55,7 @@
                         <li><a href="#container-403">4.0.3</a></li>
                         <li><a href="#container-402">4.0.2</a></li>
                         <li><a href="#container-401">4.0.1</a></li>
+                        <li><a href="#container-305">3.0.5</a></li>
                         <li><a href="#container-304">3.0.4</a></li>
                         <li><a href="#container-303">3.0.3</a></li>
                         <li><a href="#container-302">3.0.2</a></li>
@@ -150,6 +151,18 @@
                     | <a href="http://www.apache.org/dyn/closer.lua/karaf/4.0.0/apache-karaf-4.0.0-src.zip">zip</a>]
                 </li>
                 <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332045')">Release Notes</a></li>
+            </ul>
+            <h3 id="container-305">Karaf Container 3.0.5</h3>
+            <ul>
+                <li>Binary Distribution [<a
+                        href="http://www.apache.org/dyn/closer.lua/karaf/3.0.5/apache-karaf-3.0.5.tar.gz">tar.gz</a> |
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.5/apache-karaf-3.0.5.zip">zip</a>]
+                </li>
+                <li>Source Distribution [<a
+                        href="http://www.apache.org/dyn/closer.lua/karaf/3.0.5/apache-karaf-3.0.5-src.tar.gz">tar.gz</a>
+                    | <a href="http://www.apache.org/dyn/closer.lua/karaf/3.0.5/apache-karaf-3.0.5-src.zip">zip</a>]
+                </li>
+                <li><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332380')">Release Notes</a></li>
             </ul>
             <h3 id="container-304">Karaf Container 3.0.4</h3>
             <ul>
