--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -126,6 +126,22 @@
 
                                 <div class="banner--text">
                                     <div class="container-fluid">
+                                        <b>Karaf Container 3.0.6 has been released! (17/2/16)</b><br/>
+                                        This is an update patch for Apache Karaf Container 3.0.x series, containing many bug fixes, dependency updates, and improvements.
+                                    </div>
+                                </div>
+                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
+                                    &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333641')">Release Notes</a></p>
+                            </div>
+                        </center>
+                    </div>
+                    <div>
+                        <center>
+                            <div class="banner--text">
+                                <br/>
+
+                                <div class="banner--text">
+                                    <div class="container-fluid">
                                         <b>The Karaf team is proud to announce the launch of our brand new website! (4/2/16)</b><br/>
                                         After weeks of work, we are delighted to officially announce the launch of our new website.
                                         Our goal is to provide a clear and up to date message about Apache Karaf, with a modern
@@ -246,24 +262,6 @@
                                         <b>Karaf Container 3.0.5 has been released! (7/10/15)</b><br/>
                                         This is an update patch for Apache Karaf 3.0.x, containing many bug fixes,
                                         dependency updates, and improvements.
-                                    </div>
-                                </div>
-                                <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
-                                    &nbsp;<a href="">Release Notes</a></p>
-                            </div>
-                        </center>
-                    </div>
-                    <div>
-                        <center>
-                            <div class="banner--text">
-                                <br/>
-
-                                <div class="banner--text">
-                                    <div class="container-fluid">
-                                        <b>Karaf Cellar 4.0.0 has been released! (19/8/15)</b><br/>
-                                        This release of Apache Karaf Cellar is the first one of the 4.0.x series.<br/>
-                                        Apache Karaf Cellar 4.0.0 is a major new release of Cellar designed to work with
-                                        Karaf 4.0.x versions.
                                     </div>
                                 </div>
                                 <p><a class="btn btn-large btn-success" href="download.html">Download</a>&nbsp; &nbsp;
