--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -61,6 +61,11 @@
         <div id="content">
             <h2 id="2016">2016</h2>
             <p style="font-size:11px">
+                    <b>Karaf Container 3.0.6 has been released: (17/2/16)</b><br/>
+                    This is an update patch for Apache Karaf Container 3.0.x series, containing many bug fixes, dependency updates, and improvements.<br/>
+                    <a href="download.html">Download</a>&nbsp; &nbsp; &nbsp;<a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333641')">Release Notes</a> 
+            </p>
+            <p style="font-size:11px">
                     <b>The Karaf team is proud to announce the launch of our brand new website! (4/2/16)</b><br/>
                     After weeks of work, we are delighted to officially announce the launch of our new website.
                     Our goal is to provide a clear and up to date message about Apache Karaf, with a modern
