--- a/src/main/webapp/community.html
+++ b/src/main/webapp/community.html
@@ -148,13 +148,19 @@
                 <td><a href="http://www.jboss.org/">JBoss</a></td>
             </tr>
             <tr>
-                <td>Chris Custine </td>
+                <td>Chris Custine</td>
                 <td>ccustine</td>
                 <td><img src="images/check.gif"/></td>
                 <td></td>
             </tr>
             <tr>
-                <td><a href="http://blog.code-house.org/">Łukasz Dywicki</a></td>
+                <td>Andrea Cosentino</td>
+                <td>acosentino</td>
+                <td></td>
+                <td><a href="http://www.redhat.com/">RedHat</a></td>
+            </tr>
+            <tr>
+                <td><a href="http://blog.code-house.org/">Lukasz Dywicki</a></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -214,7 +220,7 @@
                 <td><a href="http://www.jboss.org/">JBoss</a></td>
             </tr>
             <tr>
-                <td><a href="http://blog.nanthrax.net">Jean-Baptiste Onofré</a></td>
+                <td><a href="http://blog.nanthrax.net">Jean-Baptiste Onofre</a></td>
                 <td>jbonofre</td>
                 <td><img src="images/check.gif"/></td>
                 <td><a href="http://www.talend.com">Talend</a></td>
