Fix broken link
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1740076 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -292,7 +292,7 @@
                                         href="community.html">contribute</a>.
                                 </div>
                                 <a class="offset-feature--link" href="community.html">Be Involved In The Community</a> |
-                                <a class="offset-feature--link" href="contribute.html">How To Contribute</a>
+                                <a class="offset-feature--link" href="community.html">How To Contribute</a>
                             </div>
                             <div class="offset8">
                                 <img src="images/apache.png"/>
